--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            text-align: center;
+            font-family: Arial, Helvetica, sans-serif;
         }
     </style>
 </head>
