--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,20 @@
             align-items: center;
             text-align: center;
             font-family: Arial, Helvetica, sans-serif;
+            color: rgba(0, 0, 0, 0.8);
+        }
+
+        .container {
+            padding: 4rem;
+            border-radius: 5px;
+            box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+        }
+
+        input {
+            border: none;
+            background-color: transparent;
+            box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+            cursor: pointer;
         }
     </style>
 </head>
